--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/NoarJob/FileContentIndex/d559ec5f-6a1b-4672-b88b-aace78b0b302.vsidx
+/.vs/NoarJob/FileContentIndex
