--- a/NoarJobUI/NoarJobUI.csproj
+++ b/NoarJobUI/NoarJobUI.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ApplyForPage.Designer.cs">
       <DependentUpon>ApplyForPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Class1.cs" />
     <Compile Include="EmployerLoginPage.cs">
       <SubType>Form</SubType>
     </Compile>
