--- a/NoarJobUI/App.config
+++ b/NoarJobUI/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IWcfNoarJob" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:62581/WcfNoarJob.svc" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IWcfNoarJob" contract="ServiceReference1.IWcfNoarJob"
+                name="BasicHttpBinding_IWcfNoarJob" />
+        </client>
+    </system.serviceModel>
 </configuration>
