--- a/WcfNoarJob/WcfNoarJob.csproj
+++ b/WcfNoarJob/WcfNoarJob.csproj
@@ -72,6 +72,7 @@
     <Compile Include="IWcfNoarJob.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WCities.cs" />
+    <Compile Include="WCompanyType.cs" />
     <Compile Include="WUser.cs" />
   </ItemGroup>
   <ItemGroup>
