--- a/WcfNoarJob/WcfNoarJob.csproj
+++ b/WcfNoarJob/WcfNoarJob.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WCities.cs" />
     <Compile Include="WCompanyType.cs" />
+    <Compile Include="WCv.cs" />
     <Compile Include="WUser.cs" />
   </ItemGroup>
   <ItemGroup>
