--- a/NoarJobDAL/NoarJobDAL.csproj
+++ b/NoarJobDAL/NoarJobDAL.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{824E14E5-8CEE-46B9-9675-6DDB90B09186}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>NoarJobDAL</RootNamespace>
     <AssemblyName>NoarJobDAL</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
