--- a/WcfNoarJob/WcfNoarJob.csproj
+++ b/WcfNoarJob/WcfNoarJob.csproj
@@ -77,6 +77,7 @@
     <Compile Include="WEmployer.cs" />
     <Compile Include="WJob.cs" />
     <Compile Include="WJobCategories.cs" />
+    <Compile Include="WJobTypes.cs" />
     <Compile Include="WUser.cs" />
   </ItemGroup>
   <ItemGroup>
