הוספת מחלקת חיפוש של משתמשים דומים בדאבל יו סי אף

--- a/WcfNoarJob/WcfNoarJob.csproj
+++ b/WcfNoarJob/WcfNoarJob.csproj
@@ -78,6 +78,7 @@
     <Compile Include="WJob.cs" />
     <Compile Include="WJobCategories.cs" />
     <Compile Include="WJobTypes.cs" />
+    <Compile Include="WSameSearchesOfUsers.cs" />
     <Compile Include="WUser.cs" />
   </ItemGroup>
   <ItemGroup>
