הוספת מחלקת יחיד ורבים של סוכן חכם בדאבל יו סי אף

--- a/WcfNoarJob/WcfNoarJob.csproj
+++ b/WcfNoarJob/WcfNoarJob.csproj
@@ -79,6 +79,7 @@
     <Compile Include="WJobCategories.cs" />
     <Compile Include="WJobTypes.cs" />
     <Compile Include="WSameSearchesOfUsers.cs" />
+    <Compile Include="WSearchAgent.cs" />
     <Compile Include="WUser.cs" />
   </ItemGroup>
   <ItemGroup>
