--- a/WebNoarJob/WebNoarJob.csproj
+++ b/WebNoarJob/WebNoarJob.csproj
@@ -32,6 +32,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -68,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="LoginPage.aspx" />
+    <Content Include="SearchPage.aspx" />
     <Content Include="SignupPage.aspx" />
     <Content Include="Styles\MasterCss.css" />
     <Content Include="Styles\MyCard.css" />
@@ -89,6 +91,13 @@
       <DependentUpon>MasterPage.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchPage.aspx.cs">
+      <DependentUpon>SearchPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SearchPage.aspx.designer.cs">
+      <DependentUpon>SearchPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="SignupPage.aspx.cs">
       <DependentUpon>SignupPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
