המשך פיתוח האתר

--- a/NoarJobUI/App.config
+++ b/NoarJobUI/App.config
@@ -11,7 +11,7 @@
         </bindings>
         <client>
             <endpoint address="http://localhost:62581/WcfNoarJob.svc" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IWcfNoarJob" contract="WcfNoarJob.IWcfNoarJob"
+                bindingConfiguration="BasicHttpBinding_IWcfNoarJob" contract="ServiceReference1.IWcfNoarJob"
                 name="BasicHttpBinding_IWcfNoarJob" />
         </client>
     </system.serviceModel>
