הוספת פונקציה לשליחת קובץ קורות חיים ושמירתו בצד שרת

--- a/NoarJobAPI/NoarJobAPI.csproj
+++ b/NoarJobAPI/NoarJobAPI.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\NoarJobBL\NoarJobBL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Cvs\" />
+  </ItemGroup>
+
 </Project>
