--- a/NoarJobUI/App.config
+++ b/NoarJobUI/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <appSettings>
+    <add key="WebApiBaseUrl" value="http://localhost:5063/api/" />
+  </appSettings>
 </configuration>
